--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@rn-primitives/portal": "~1.3.0",
     "@rn-primitives/select": "^1.2.0",
     "@rn-primitives/slot": "^1.2.0",
+    "@rn-primitives/switch": "^1.2.0",
     "@rn-primitives/tabs": "^1.2.0",
     "@tanstack/react-form": "^1.26.0",
     "@tanstack/react-query": "^5.90.12",
